--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -37,18 +37,58 @@
     justify-content: space-between;
   }
 
+  &__loader {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    z-index: 1;
+  }
+
+  &__backdrop {
+    width: 100%;
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.65);
+  }
+
+  &__icon {
+    width: 100%;
+    position: absolute;
+    z-index: 3;
+    height: 100%;
+    background-image: url('../../assets/loader.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__display {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+  }
+
   &__buffer {
     font-size: 18px;
     margin-bottom: 8px;
     text-align: right;
-    overflow: hidden;
+    text-overflow: clip;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 
   &__result {
     font-size: 21px;
     text-align: right;
-    overflow: hidden;
     white-space: nowrap;
+    text-overflow: clip;
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
 
   &__bottom {
@@ -58,6 +98,7 @@
     width: 100%;
     border-radius: 0 0 3px 3px;
     background-color: #979797;
+    position: relative;
   }
 
   &__nums {
